# negi

./: Cargo.toml  README.md
internal/: Cargo.toml
internal/src/: lib.rs  parse.rs
negi-bin/: Cargo.toml
negi-bin/src/: main.rs
negi-core/: Cargo.toml
negi-core/src/: error.rs  lib.rs  redis.rs
src/: lib.rs
