[package]
name = "negi-bin"
version = "0.1.0"
authors = ["Benoit Eudier <benoit.eudier@gmail.com>"]
edition = "2018"

[dependencies]
negi_macro = { path = "../internal" }
negi-core = { path = "../negi-core" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
typetag = "0.1"

redis = "0.10.0"
rayon = "1.1.0"

diesel = { version = "1.4.0", features = ["chrono", "uuid", "r2d2", "postgres"] }
